--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #fff;
+  background-color: #000000;
   margin: 0;
   padding: 0;
   text-align: center;
